--- a/PFlowsPaperv2/references.bib
+++ b/PFlowsPaperv2/references.bib
@@ -1615,3 +1615,46 @@ chapter = {6},
     howpublished = "\url{https://eur-lex.europa.eu/eli/reg/2019/1009}",
     note = "[Online; accessed 25-August-2022]"
     }
+
+@article{cornel2009phosphorus,
+  title={Phosphorus recovery from wastewater: needs, technologies and costs},
+  author={Cornel, P and Schaum, CJWS},
+  journal={Water Science and Technology},
+  volume={59},
+  number={6},
+  pages={1069--1076},
+  year={2009},
+  publisher={IWA Publishing}
+}
+
+@article{nattorp2017cost,
+  title={Cost assessment of different routes for phosphorus recovery from wastewater using data from pilot and production plants},
+  author={N{\"a}ttorp, Anders and Remmen, Kirsten and Remy, Christian},
+  journal={Water Science and Technology},
+  volume={76},
+  number={2},
+  pages={413--424},
+  year={2017},
+  publisher={IWA Publishing}
+}
+
+@article{kahiluoto2021global,
+  title={Global nutrient equity for people and the planet},
+  author={Kahiluoto, Helena and Pickett, Kate E and Steffen, Will},
+  journal={Nature Food},
+  volume={2},
+  number={11},
+  pages={857--861},
+  year={2021},
+  publisher={Nature Publishing Group}
+}
+
+@article{klinglmair2015phosphorus,
+  title={Phosphorus in Denmark: national and regional anthropogenic flows},
+  author={Klinglmair, Manfred and Lemming, Camilla and Jensen, Lars Stoumann and Rechberger, Helmut and Astrup, Thomas Fruergaard and Scheutz, Charlotte},
+  journal={Resources, Conservation and Recycling},
+  volume={105},
+  pages={311--324},
+  year={2015},
+  publisher={Elsevier}
+}
